# wasaitalent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  git-push.sh
client/: index.html  package-lock.json  package.json
client/src/: main.js
client/src/api/: index.js
client/src/router/: index.js
client/src/stores/: user.js
client/src/views/: Admin.vue  Layout.vue  Login.vue  TalentDetail.vue  TalentForm.vue  TalentList.vue
docs/: API.md  DEPLOY.md
scripts/: .env.example  deploy.sh  setup-deploy.sh
server/: index.js  init-db.js  package-lock.json  package.json
server/middleware/: auth.js
server/models/: database.js
server/routes/: admin.js  auth.js  openapi.js  talents.js
server/scripts/: seed-test-data.js
wsapi/: README.md  __init__.py  client.py  exceptions.py  publish.sh  pyproject.toml  requirements.txt
wsapi/importers/: __init__.py  linkedin.py  maimai.py  schema.py  utils.py
wsapi/tests/: conftest.py  test_admin.py  test_auth.py  test_openapi.py  test_talents.py
