[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsapi-sdk"
version = "0.1.4"
description = "WasaiTalent API Python SDK"
requires-python = ">=3.8"
readme = "README.md"
authors = [
    { name = "Chandler" , email = "275737875@qq.com" },
]

dependencies = [
    "requests>=2.28.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "responses>=0.23.0",
]

[tool.setuptools]
packages = ["wsapi", "wsapi.importers"]

[tool.setuptools.package-dir]
wsapi = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
